--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 			<h1 class="logo"><a href="#">Cahee</a></h1>
 			<div class="menu">
 			 		<a href="#" class="menu__link">HOME</a>
-			 		<a href="#" class="menu__link">ABOUT</a>
-			 		<a href="#" class="menu__link">SERVICES</a>
-			 		<a href="#" class="menu__link">GALLERY</a>
-			 		<a href="#" class="menu__link">BLOG</a>
-			 		<a href="#" class="menu__link">CONTACT</a>
+			 		<a href="#about" class="menu__link">ABOUT</a>
+			 		<a href="#SERVICES" class="menu__link">SERVICES</a>
+			 		<a href="#GALLERY" class="menu__link">GALLERY</a>
+			 		<a href="#BLOG" class="menu__link">BLOG</a>
+			 		<a href="#CONTACT" class="menu__link">CONTACT</a>
 			</div>
 		</div>
 	</header>
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 	</section>
-		<section class="section3">
+	<section class="section3" id='SERVICES'>
 		<div class="container">
 			<div class="section3__item">
 				<ul class="section3__lists">
@@ -83,7 +83,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="section4">
+	<section class="section4" id="GALLERY">
 		<div class="container">
 
 			<div class="section4__item--right">
@@ -118,25 +118,25 @@
 			</div>
 		</div>
 	</section>
-	<section class="section5">
-	<div class="container">
-		<div class="center">
-			<div class="section5__item">
-				<div class="section5__dicr">
-					<h2 class="section5__h2">Subscribe To Us</h2>
-					<div class="section5__p">
-						<p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+	<section class="section5" >
+		<div class="container">
+			<div class="center">
+				<div class="section5__item">
+					<div class="section5__dicr">
+						<h2 class="section5__h2">Subscribe To Us</h2>
+						<div class="section5__p">
+							<p>Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+						</div>
 					</div>
+					<form action="" class="form">
+						<input type="email" placeholder="Your email address..." id="email" class="form__input">
+						<button id='email' class="form__button">SUBSCRIBE</button>
+					</form>
 				</div>
-				<form action="" class="form">
-					<input type="email" placeholder="Your email address..." id="email" class="form__input">
-					<button id='email' class="form__button">SUBSCRIBE</button>
-				</form>
 			</div>
-		</div>
-	</div>	
+		</div>	
 	</section>
-	<section class="section6">
+	<section class="section6" id="BLOG">
 		<div class="container">
 			<div class="section6__item">
 				<h2 class="section6__h2">Blog</h2>
@@ -196,7 +196,7 @@
 			<a href="#" class="section6__button">VIEW MORE</a>
 		</div>
 	</section>
-	<section class="section7">
+	<section class="section7" id="CONTACT">
 		<div class="container">
 			<div class="section7__item">
 				<h2 class="section7__h2">Contact</h2>
