--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 				<div class='section7__info'>
 					<input type="text" placeholder="Auskteez Tran" class="section7__input">
 					<input type="email" placeholder="Your email..." class="section7__input">
-					<input type="phone" placeholder="Your phone number..." class="section7__input">
+					<input type="tel" placeholder="Your phone number..." class="section7__input">
 					<textarea name="comment" cols="1" rows="13" placeholder="Your messge..." class="section7__input"></textarea>
 				</div>
 				<div class='section7__info'>
